After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680171 - Calibration logs glib critical warnings
Calibration logs glib critical warnings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Wacom
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: Peter Hutterer
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-18 13:21 UTC by Olivier Fourdan
Modified: 2012-07-19 15:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (826 bytes, patch)
2012-07-18 13:25 UTC, Olivier Fourdan
committed Details | Review

Description Olivier Fourdan 2012-07-18 13:21:39 UTC
Once calibration is successfully completed, gnome-control-center logsa critical warning:

(gnome-control-center:2342): GLib-CRITICAL **: g_variant_unref: assertion 'value->ref_count > 0' failed
Comment 1 Olivier Fourdan 2012-07-18 13:25:35 UTC
Created attachment 219121 [details] [review]
Proposed patch

Similar to commit 1ecd657

(and, err, yes, I've stolen the commit message :-) )
Comment 2 Bastien Nocera 2012-07-19 15:37:53 UTC
Pushed, thanks.