wacom: Fix critical warning after calibration

g_variant_new_array() creates a floating reference and
g_settings_set_value() consumes it, so don't unref the GVariant
ourselves.

https://bugzilla.gnome.org/show_bug.cgi?id=680171